SERVER-35576 Fixed PlanCacheClear clear time of check